Text alignement correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header {
 
 nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -43,6 +42,7 @@ a {
     display: flex;
     align-items: center;
     height: 100%;
+    width: 200px;
     margin-left: 100px;
 }
 
@@ -50,7 +50,7 @@ a {
 
 main {
     display: flex;
-    background-image:   linear-gradient(rgb(0, 0, 0), rgba(63, 61, 61, 0.3)),
+    background-image:   linear-gradient(rgb(0, 0, 0), rgba(122, 121, 121, 0.3)),
                         url("../img/bg.png");
     background-size: cover;
     align-items: center;
@@ -95,7 +95,6 @@ main {
 #title2, #p1 {
     display: flex;
     align-items: center;
-    justify-content: space-around;
     color: white;
     padding: 0px 280px;
     font-size: 40px;
@@ -122,7 +121,7 @@ main {
     display: flex;
     justify-content: space-around;
     color: white;
-    padding: 0px 200px;
+    padding: 0 300px;
     font-size: 40px;
 }
 
@@ -138,7 +137,7 @@ main {
     padding: 20px;
     width: 130px;
     font-size: 20px;
-    margin-left: 200px;
+    margin-left: 300px;
 
 }
 
